--- a/Docs/README
+++ b/Docs/README
@@ -1,1 +1,3 @@
-readme
+El proyecto SMARTCLOTH consiste, a nivel tecnológico, en el diseño e implementación de un mantel digital para la auto-gestión de la dieta en pacientes diabéticos.
+
+
