--- a/Docs/README
+++ b/Docs/README
@@ -1,11 +1,11 @@
 El proyecto SMARTCLOTH consiste, a nivel tecnológico, en el diseño e implementación de un mantel digital para la auto-gestión de la dieta en pacientes diabéticos.
 
-![Diagrama Casos de Uso](https://raw.githubusercontent.com/i62caroi/SmartCloth/master/Docs/assets/Casos-de-uso.png)
+![Diagrama Casos de Uso](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Casos-de-uso.png)
 
-![Diagrama de Flujo](https://raw.githubusercontent.com/i62caroi/SmartCloth/master/Docs/assets/Diagrama-de-flujo.jpg)
+![Diagrama de Flujo](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-de-flujo.jpg)
 
-![Diagrama de Actividades](https://raw.githubusercontent.com/i62caroi/SmartCloth/master/Docs/assets/Diagrama-actividades.jpg)
+![Diagrama de Actividades](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-actividades.jpg)
 
-![Diagrama de Estados](https://raw.githubusercontent.com/i62caroi/SmartCloth/master/Docs/assets/Diagrama-estados.jpg)
+![Diagrama de Estados](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-estados.jpg)
 
-![Diagrama de Clases](https://raw.githubusercontent.com/i62caroi/SmartCloth/master/Docs/assets/Diagrama-clases.jpg)
+![Diagrama de Clases](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-clases.jpg)
