--- a/Docs/README
+++ b/Docs/README
@@ -1,5 +1,6 @@
 El proyecto SMARTCLOTH consiste, a nivel tecnológico, en el diseño e implementación de un mantel digital para la auto-gestión de la dieta en pacientes diabéticos.
 
+![Diagrama Casos de Uso](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Casos-de-uso.png)
 
 ![Diagrama Casos de Uso](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Casos-de-uso.png?raw=true)
 
