--- a/Docs/README
+++ b/Docs/README
@@ -1,11 +1,11 @@
 El proyecto SMARTCLOTH consiste, a nivel tecnológico, en el diseño e implementación de un mantel digital para la auto-gestión de la dieta en pacientes diabéticos.
 
-![Diagrama Casos de Uso](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Casos-de-uso.png?raw=true)
+[Diagrama Casos de Uso](assets/Casos-de-uso.png)
 
-![Diagrama de Flujo](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-de-flujo.jpg?raw=true)
+[Diagrama de Flujo](assets/Diagrama-de-flujo.jpg)
 
-![Diagrama de Actividades](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-actividades.jpg?raw=true)
+[Diagrama de Actividades](assets/Diagrama-actividades.jpg)
 
-![Diagrama de Estados](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-estados.jpg?raw=true)
+[Diagrama de Estados](assets/Diagrama-estados.jpg)
 
-![Diagrama de Clases](https://github.com/i62caroi/SmartCloth/blob/main/Docs/assets/Diagrama-clases.jpg?raw=true)
+[Diagrama de Clases](assets/Diagrama-clases.jpg)
